# plat0

./: Cargo.toml  README.md  default.nix  flake.nix  flake.nix.bac  plat0.csv  result  shell.nix
data/: CDF-plat0.csv  HYM-plat0.csv  SPT-plat0.csv
src/: date.rs  main.rs  scrape.rs
