[package]
name = "plat0-scraper"
version = "0.1.0"
edition = "2021"
authors = ["blltrx <hello@bellatrix.dev>"]
description = "A web scraper for RealTimeTrains focusing of historical platform allocation"
readme = "README.md"
repository = "https://github.com/blltrx/plat0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking"] }
scraper = "0.19.0"
